# grape

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml
apps/backend/: .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  SETUP_SUMMARY.md  STORY_1_3_IMPLEMENTATION.md  STORY_1_3_IMPLEMENTATION.py  STORY_1_3_SUMMARY.md  TESTING_GUIDE.md  WIKIDATA_ENHANCEMENT_SUMMARY.md  install.sh  main.py  pyproject.toml  requirements.txt  sample_graph.ttl  test_api_labels.py  test_label_query.py  test_story_1_3.py  test_story_1_3.sh  test_story_1_3_simple.py  test_wikidata_query.py  uvicorn_config.py
apps/backend/adapters/: __init__.py  gen2kgbot_adapter.py
apps/backend/api/: mcp.py
apps/backend/api/routes/: __init__.py  graph.py  graphs.py  health.py  wikidata.py
apps/backend/core/: __init__.py  config.py
apps/backend/gen2kgbot/: .gitignore  CITATION.cff  README.md  codemeta.json  environment.yml  langgraph.json
apps/backend/gen2kgbot/app/api/: q2forge_api.py
apps/backend/gen2kgbot/app/evaluations/: langsmith_evaluation_v1_s1.py  langsmith_evaluation_v1_s2_6.py  langsmith_evaluation_v2_s7.py
apps/backend/gen2kgbot/app/preprocessing/: compute_embeddings.py  gen_descriptions.py  helper_queries.txt
apps/backend/gen2kgbot/app/utils/: clear_cache.py  config_manager.py  construct_util.py  envkey_manager.py  graph_nodes.py  graph_routers.py  graph_state.py  logger_manager.py  prompts.py  (+2 more)
apps/backend/gen2kgbot/config/: logging.yml  params.yml  params_d2kab.yml  params_original_d2kab.yml  params_original_idsm.yml  params_prod.yml  params_to_add.yml
apps/backend/gen2kgbot/doc/: api_description.md  dev_guidelines.md
apps/backend/models/: __init__.py  requests.py  responses.py
apps/backend/pipelines/: README.md  __init__.py  example_based_prompt_retriever.py  federated_cross_kg_connector.py  multi_hop_path_explorer.py  neighbourhood_retriever.py  ontology_context_builder.py  proof_validation_engine.py  reasoning_narrator.py  semantic_concept_finder.py  sparql_query_executor.py
apps/backend/repositories/: __init__.py  graph_repository.py
apps/backend/tests/: README.md  test_concept_finder.py  test_example_retriever.py  test_federated_connector.py  test_graph_routes.py  test_multi_hop_explorer.py  test_neighbourhood_retriever.py  test_ontology_builder.py  test_reasoning_narrator.py  test_sparql_executor.py  test_validation_engine.py
(+67 files in other folders)
